--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <!-- About section -->
         <article id="about">
           <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
+          <section class="about-section">
             <div>
               <img
                 class="image-circle"
@@ -36,6 +35,8 @@
                 alt="Pete Thinkful"
               />
             </div>
+            <div class="about-intro">
+            <h3>Hi! I'm Pete Thinkful</h3>
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
             <ul>
@@ -47,6 +48,7 @@
               Please feel free to take a look at my website and feel free to
               <a href="#contact">contact me</a>.
             </p>
+            </div>
           </section>
 
           <section>
@@ -69,6 +71,7 @@
         <!-- Portfolio section -->
         <article id="portfolio">
           <h2>Portfolio</h2>
+          <div class="portfolio-row">
           <section>
             <h3>Abstract Red</h3>
             <div>
@@ -101,6 +104,7 @@
               locavore shabby chic forage.
             </p>
           </section>
+          </div>
         </article>
 
         <hr />
